<resources>
    <string name="app_name">IESBProjeto1</string>
    <string name="welcome">Boas vindas ao projeto!</string>
    <string name="firstScreenButtonLabel">Clique aqui para entrar</string>
    <string name="hint_name">Digite seu nome de usuário aqui!</string>
    <string name="homeText">Boas vindas a Home!</string>
    <string name="homeButtonLabel">Adicionar nome</string>
    <string name="homeEditTextView">Adicione um nome na lista</string>
    <string name="so">S.O</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
</resources>